Add ORM (object relational mapping) to user