@@ -1,15 +1,15 @@
-package com.gerasimov.capstone.dbclasses.services;
+package com.gerasimov.capstone.dbclasses.services.impl;
 
 
 import com.gerasimov.capstone.dbclasses.domain.UserDto;
 import com.gerasimov.capstone.dbclasses.entity.User;
 import com.gerasimov.capstone.dbclasses.mappers.UserMapper;
 import com.gerasimov.capstone.dbclasses.repositories.UserRepository;
+import com.gerasimov.capstone.dbclasses.services.UserService;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -17,16 +17,15 @@ public class UserServiceImpl implements UserService {
     private UserRepository userRepository;
     private UserMapper userMapper;
 
-    public List<UserDto> getAllUsers() {
+    public List<UserDto> getAll() {
         List<User> users = userRepository.findAll();
-        List<UserDto> usersDto = users.stream()
-                .map(userMapper::userToUserDto)
-                .collect(Collectors.toList());
-        return usersDto;
+        return users.stream()
+                .map(userMapper::toDto)
+                .toList();
     }
 
-    public void saveUser(UserDto userDto) {
-        User user = userMapper.userDtoToUser(userDto);
+    public void save(UserDto userDto) {
+        User user = userMapper.toEntity(userDto);
         userRepository.save(user);
     }
 }
